--- a/Exam.xcodeproj/xcshareddata/xcschemes/Exam-Package.xcscheme
+++ b/Exam.xcodeproj/xcshareddata/xcschemes/Exam-Package.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1330"
+   LastUpgradeVersion = "9999"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -26,8 +26,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
@@ -36,16 +35,6 @@
                BlueprintIdentifier = "exam::ExamTests"
                BuildableName = "ExamTests.xctest"
                BlueprintName = "ExamTests"
-               ReferencedContainer = "container:Exam.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "0E95BA0D28227635002EF4CB"
-               BuildableName = "ExamUITests.xctest"
-               BlueprintName = "ExamUITests"
                ReferencedContainer = "container:Exam.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -61,16 +50,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "exam::Exam"
-            BuildableName = "Exam.framework"
-            BlueprintName = "Exam"
-            ReferencedContainer = "container:Exam.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -78,16 +57,6 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "exam::Exam"
-            BuildableName = "Exam.framework"
-            BlueprintName = "Exam"
-            ReferencedContainer = "container:Exam.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
