--- a/Exam.xcodeproj/xcshareddata/xcschemes/ExamTests.xcscheme
+++ b/Exam.xcodeproj/xcshareddata/xcschemes/ExamTests.xcscheme
@@ -11,7 +11,17 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES">
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "0E95B9ED28227634002EF4CB"
+            BuildableName = "Exam.app"
+            BlueprintName = "Exam"
+            ReferencedContainer = "container:Exam.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
