--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,10 +12,10 @@ jobs:
     runs-on: macos-latest
     strategy:
         matrix:
-          destination: ['platform=iOS Simulator,OS=15.4,name=iPhone 13 Pro Max']
+          destination: ['platform=iOS Simulator,name=iPhone 11 Pro Max,OS=latest']
     steps:
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@v3
       - name: Build
         run: |
           xcodebuild clean build -project Exam.xcodeproj -scheme Exam -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
