--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: macos-latest
     strategy:
         matrix:
-          destination: ['platform=iOS Simulator,name=iPhone 11,OS=latest']
+          destination: ['platform=iOS Simulator,id=iPhone 11,name=latest']
     steps:
       - name: Checkout
         uses: actions/checkout@v3
