Added networking class, and tests

--- a/Exam.xcodeproj/xcshareddata/xcschemes/Exam.xcscheme
+++ b/Exam.xcodeproj/xcshareddata/xcschemes/Exam.xcscheme
@@ -26,8 +26,29 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "0E95B9ED28227634002EF4CB"
+            BuildableName = "Exam.app"
+            BlueprintName = "Exam"
+            ReferencedContainer = "container:Exam.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "0E95BA0328227635002EF4CB"
+               BuildableName = "ExamTests.xctest"
+               BlueprintName = "ExamTests"
+               ReferencedContainer = "container:Exam.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
