--- a/.github/workflows/CI2.yml
+++ b/.github/workflows/CI2.yml
@@ -20,6 +20,7 @@ jobs:
         uses: futureware-tech/simulator-action@v1
         with:
           model: 'iPhone 11'
+          os: 'iOS'
           os_version: '15.0'
       - name: Show Build SDK
         run:  xcodebuild -project Exam.xcodeproj -scheme Exam -showsdks
