--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI2
 
 on:
   push:
@@ -16,18 +16,13 @@ jobs:
         run:  ls /Applications | grep Xcode
       - name: Force Xcode
         run:  sudo xcode-select -switch /Applications/Xcode_13.2.1.app
-      - name: Install simulator
-        run:  xcversion simulators --install='iOS 15.0'
-      - name: Prepare iOS 15.0 simulator
-        run: |
-          sudo mkdir -p /Library/Developer/CoreSimulator/Profiles/Runtimes
-          sudo ln -s /Applications/Xcode_13.2.1.app/Contents/Developer/Platforms/iPhoneOS.platform/Library/Developer/CoreSimulator/Profiles/Runtimes/iOS.simruntime /Library/Developer/CoreSimulator/Profiles/Runtimes/iOS\ 15.0.simruntime
-          xcrun simctl list runtimes
-          xcrun simctl create iPhone_11 "iPhone 11" "com.apple.CoreSimulator.SimRuntime.iOS-15-0"
-          xcrun simctl list devices 15.0
+      - name: Setup Simulator
+        uses: futureware-tech/simulator-action@v1
+        with:
+          model: 'iPhone 11'
       - name: Show Build SDK
         run:  xcodebuild -project Exam.xcodeproj -scheme Exam -showsdks
       - name: Show availlable destinations
         run:  xcodebuild -project Exam.xcodeproj -scheme Exam -showdestinations
       - name: Clean Build and Test
-        run:  xcodebuild clean test -project Exam.xcodeproj -scheme Exam -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 11,OS=15.0' | xcpretty && exit ${PIPESTATUS[0]}
+        run:  xcodebuild clean test -project Exam.xcodeproj -scheme Exam -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 11,OS=15.2' | xcpretty && exit ${PIPESTATUS[0]}
